Fix robot collision in Suspicious state and update gameplay

--- a/index.html
+++ b/index.html
@@ -115,6 +115,30 @@
         </div>
     </div>
 
+    <!-- Scores Modal -->
+    <div id="scoresModal" class="settings-modal hidden">
+        <div class="settings-content">
+            <h2 class="settings-title">ARCHIVED DATA</h2>
+
+            <div class="setting-item">
+                <span class="setting-label">HIGHEST PROTOCOL</span>
+                <span id="highLevelDisplay" class="setting-value">LEVEL 1</span>
+            </div>
+
+            <div class="setting-item">
+                <span class="setting-label">HIGHSCORE</span>
+                <span id="highScoreDisplay" class="setting-value">0</span>
+            </div>
+
+            <button id="closeScoresBtn" class="menu-btn small">
+                <span class="btn-bracket">
+                    << /span>
+                        <span class="btn-text">RETURN</span>
+                        <span class="btn-bracket">></span>
+            </button>
+        </div>
+    </div>
+
     <!-- Audio elements -->
     <audio id="ambientLoop" loop>
         <source src="assets/ambient.mp3" type="audio/mpeg">
